[project]
name = "gamehub"
version = "0.1.0"
description = "Server for multiplayer online games"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.9.1",
]

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ["PLR2004"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["PLR6301", "PLR0904"]