[project]
name = "gamehub"
version = "0.1.0"
description = "Server for multiplayer online games"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "websockets>=14.1",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.9.1",
    "taskipy>=1.14.1",
    "pytest-asyncio>=0.25.2",
]

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ["PLR2004"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["PLR6301", "PLR0904"]

[tool.pytest.ini_options]
pythonpath = "."

[tool.taskipy.tasks]
pre_format = "ruff check . --fix"
format = "ruff format ."
test = "pytest -s -x --cov=gamehub --cov-config=.coveragerc -vv"
post_test = "coverage html"
